firts implementation from ImgForm

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ CRON_SECRET=YOUR_CRON_SECRET_HERE
 
 # Used to validate preview requests
 PREVIEW_SECRET=YOUR_SECRET_HERE
+
+SMTP_HOST=host.example.com
+SMTP_PORT=587
+SMTP_USER=noreply@example.com
+SMTP_PASS=secretpassword
+EMAIL_FROM=noreply@example.com
+NAME_FROM=ExampleName
